--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 <div class="content">
 	<h1>Smart-Digital<br>
-		Watch-om
+		Watch
 	</h1>
 	<p>Lorem lpsum has been the industry's standard
 	   dummmy text ever since the 1500s,when an
