--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Responsive watch website</title>
+	<title>Responsive watchwebsite</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+<
+
+
+
+
+
+
+
+
+
+
+/head>
 <body>
 	<header class="header">
 		<div class="left">
